# CProgramToSMT

./: .gitignore  Makefile  OUTPUTS.md  README.md  setup_llvm.sh
llvm-pass-moduleTest/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cfgRun  cmake_install.cmake  fmsafe_Out.ssa  fmsafe_optOut.ssa  myClangRun  myRun  run
llvm-pass-moduleTest/benchmarks/: Program_thermostat.c  controller.h  heater.c  myPrg.c  mythermo1.c  mythermostat.c  test  test.bc  test.c  test1.bc  test2.c  test3.c  test4.c  test5.c  thermo1.h  thermostat.h
llvm-pass-moduleTest/benchmarks/DCmotor/: dcMotor.c  dcMotor.h  dcmotor.ha
llvm-pass-moduleTest/benchmarks/Jay/: afc_25_08.c  afc_26_08_mod.c  powertrain.ha
llvm-pass-moduleTest/benchmarks/doubleIntegrator/: doubleintg.ha  doubleintg_1.smt2
llvm-pass-moduleTest/benchmarks/nuclearReactor/: a.out  fmsafe_Out.ssa  nuclear.c  nuclear.h  nuclearFirstVer.c  nuclearReactor.c  nuclearReactor.h
llvm-pass-moduleTest/benchmarks/powerTrain/: ORIGINAL_afc.c  afc.c  controller.h  test5.c
llvm-pass-moduleTest/benchmarks/powerTrainSimple/: afc_simple.c  controller_simple.h  powertrain.ha  powertrain_model.drh
llvm-pass-moduleTest/benchmarks/smallBenchmark/: smallBenchmark.c  smallBenchmark.h  smallBenchmark.ha
llvm-pass-moduleTest/src/: CMakeLists.txt  DataStructures.h  IRssa.cpp  IRssa.h  Makefile  allStackVariables.cpp  allStackVariables.h  cmake_install.cmake  controllerConversion.cpp  coreWrapperSSA.cpp  coreWrapperSSA.h  optDataStructures.h  optIRssa.cpp  optIRssa.h  utilities.cpp  utilities.h
(+7 files in other folders)
